Initial implementation of maps. UNtested
